fix: align header and footer

--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -24,7 +24,7 @@
 
   grid-column: 1 / -1;
   display: grid;
-  grid-template-columns: 1fr 1fr 3fr;
+  grid-template-columns: 1fr 0.5fr 3.5fr;
 
   align-items: center;
 }
@@ -39,6 +39,8 @@
 
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  
+  justify-items: center;
 }
 
 .menu ul,
@@ -137,4 +139,6 @@
 .footer p {
   font-size: 13px;
   font-weight: normal;
+
+  text-align: center;
 }
